fixed bookin button sizing issue on mobile

--- a/css/main.css
+++ b/css/main.css
@@ -93,6 +93,7 @@ p {
   font-size: 1.2em;
   color: white;
   border-radius: 3px;
+  white-space: nowrap;
 }
 
 /* HOME PAGE */
